# Pherix

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TASK.md  demo.txt  docs.html  index.html  llms-full.txt  llms.txt  overnight-sims.txt  pyproject.toml  railway.json  requirements.txt  run-flagships.txt  sims.txt
GENERALIZATION-NOTES/: README.md  a7-harvest.md  parity.md  ts-adapters-a.md  ts-adapters-b.md
dashboard/backend/: API.md  __init__.py  app.py  auth.py  db.py  models.py
dashboard/backend/routers/: __init__.py  agents.py  arbiter.py  ingest.py  memory.py  metering.py  orgs.py  policies.py  search.py
docs/: ROADMAP.md  demo-checklist.html  demo.html  dogfood-demos.html  dogfood.html  flagship-sims.html  future.html  index.html  north-star.html  phases.html  position.html  pressure-test.html  replay-recipe.md  roadmap.html  slice-1.html  slice-2-decisions.html  slice-3-decisions.html  slice-4-decisions.html  slice-5-decisions.html  slice-6-decisions.html  slice-7-5-decisions.html  slice-7-decisions.html  slice-8-decisions.html  trust-laws-results.json  trust-laws.html  where-we-are.html
docs-site/: adapters.html  compensators.html  four-axes.html  index.html  python-api.html  quickstart.html  styles.css  typescript-api.html
docs/operator/: adapter-compensator-base.md  airgapped-capstone.md  demos.md  mcp-gateway.md  policy.md  verification.md
examples/: __init__.py  feel_it_transfers.py  quickstart.py  slice1_demo.py  slice2_demo.py  slice3_demo.py  slice4_demo.py  slice5_demo.py  slice6_demo.py  slice7_demo.py  slice8_demo.py
examples/coding_cli/: FINDINGS.md  __init__.py  capture.py  gateway.py
examples/demo/: __init__.py  __main__.py  acts.py  board.py  session.json  session.py
examples/demos/: authority.py  gate.py  isolation.py  lineage.py  undo.py
examples/dogfood/: README.md  __init__.py  capture.py  harness.py  infra.py
examples/dogfood/audit/: README.md  __init__.py  __main__.py
examples/dogfood/coding/: README.md  __init__.py  __main__.py  redteam.py  sandbox.py
examples/dogfood/coding/openclaw/: __init__.py  capstone.sh  gateway_config.py  launcher.py  openclaw.json
examples/dogfood/devops/: __init__.py  __main__.py  scenario.py
examples/dogfood/sims/: __init__.py  __main__.py  access.py  cloud.py  coding_agent.py  concurrent.py  crm.py  finance.py  healthcare.py  insurance.py  memory_agent.py  migrations.py  openclaw.py  payments.py  pipeline.py  refunds.py  robustness.py  scenario.py  sre.py
examples/dogfood/sims/devops/: __init__.py  __main__.py  agent.py  fixtures.py
examples/dogfood/sims/enterprise/: __init__.py  __main__.py  agent.py  fixtures.py  robustness.py
examples/local_airgap/: AIRGAP.md  __init__.py  capture_airgap.py  run_local.py
pherix/: __init__.py
pherix-ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
pherix-ts/examples/: demo.ts
pherix-ts/src/: audit.ts  dry-run.ts  effects.ts  envelope.ts  index.ts  isolation.ts  policy.ts  recovery.ts  runtime.ts  tools.ts  transaction.ts
pherix-ts/src/adapters/: base.ts  dynamodb.ts  elasticsearch.ts  fs.ts  gcs.ts  git.ts  http.ts  index.ts  memory.ts  messagequeue.ts  mongodb.ts  mysql.ts  postgres.ts  redis.ts  rest.ts  s3.ts  sql.ts
pherix-ts/src/compensators/: identity.ts  index.ts  payments.ts  provisioning.ts  saas.ts
pherix-ts/test/: async.test.ts  compensators.test.ts  dry_run.test.ts  dynamodb.test.ts  effects.test.ts  elasticsearch.test.ts  envelope.test.ts  fs.test.ts  gate.test.ts  gcs.test.ts  git.test.ts  helpers.ts  isolation.test.ts  isolation_self_write.test.ts  memory.test.ts  messagequeue.test.ts  mongodb.test.ts  mysql.test.ts  partial.test.ts  policy.test.ts  postgres.test.ts  recovery.test.ts  redis.test.ts  rest.test.ts  runtime.test.ts  s3.test.ts  staging.test.ts  transaction.test.ts  world_state.test.ts
pherix-ts/test/parity/: runner.mts
pherix/compensators/: __init__.py  identity.py  payments.py  provisioning.py  saas.py
pherix/core/: audit.py  dry_run.py  effects.py  envelope.py  isolation.py  memory.py  policy.py  recovery.py  replay.py  runtime.py  tools.py  transaction.py
pherix/core/adapters/: __init__.py  base.py  dynamodb.py  elasticsearch.py  filesystem.py  gcs.py  git.py  http.py  memory.py  messagequeue.py  mongodb.py  mysql.py  postgres.py  redis.py  rest.py  s3.py  sql.py
pherix/frontends/: library.py
pherix/frontends/proxy/: __init__.py  __main__.py  client.py  gateway.py  server.py  transport.py
pherix/governance/: __init__.py  preview.py  spec.py  templates.py
pherix/inspector/: README.md  __init__.py  __main__.py  reader.py  seed.py  server.py
pherix/inspector/static/: app.js  index.html  style.css
pherix/sync/: __init__.py  crypto.py  redact.py  shipper.py
server/: __init__.py  app.py
site/: console.html  demos.html  docs.html  features.html  get-started.html  governance.html  governance.js  how-it-works.html  index.html  policy-eval.js
tests/: _conformance.py  _fakes.py  _fuzz.py  _laws.py  _laws_gen.py  _stateful.py  conftest.py  governance_js_runner.cjs  pillar_report.py  test_accountability.py  test_actor.py  test_adapters_base.py  test_adapters_dynamodb.py  test_adapters_elasticsearch.py  test_adapters_filesystem.py  test_adapters_gcs.py  test_adapters_git.py  test_adapters_http.py  test_adapters_memory.py  test_adapters_messagequeue.py  test_adapters_mongodb.py  test_adapters_mysql.py  test_adapters_postgres.py  test_adapters_redis.py  test_adapters_rest.py  test_adapters_s3.py  test_adapters_sql.py  test_approve_over_wire.py  test_audit.py  test_audit_conflicts.py  test_audit_shipping.py  test_authority_policy.py  test_client_id.py  test_coding_cli_gateway.py  test_compensators_identity.py  test_compensators_payments.py  test_compensators_provisioning.py  test_compensators_saas.py  test_conformance_adapters.py  test_conformance_compensators.py  (+98 more)
