[project]
name = "pherix"
version = "0.0.0"
description = "A transactional resource runtime for AI agents"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
# Property-based / chaos / differential testing of the kernel laws
# (tests/test_laws_*.py). Hypothesis is a TEST-ONLY dependency — the kernel
# (pherix/core/) imports nothing from it; only the law suites do. Everything
# still runs fully offline. See docs/operator/verification.md.
test = ["pytest", "hypothesis"]
# Real-agent dogfoods only (examples/dogfood/). The library itself stays
# dependency-free — this extra is never needed to import or use pherix, only
# to run the keyed real-agent scripts. `anthropic` drives the cloud path;
# `openai` drives any OpenAI-compatible local endpoint (Ollama / vLLM) for the
# model-blind / air-gapped runs.
dogfood = ["anthropic", "openai"]

# Per-backend adapter drivers. The kernel is dependency-free: every adapter
# lazy-imports its driver inside its own __init__/methods, so `import pherix`
# needs none of these. A driver is pulled only to *instantiate* the matching
# adapter — `pip install pherix[postgres]` etc. The compensator catalog and the
# REST/MQ harnesses are client-agnostic (duck-typed) and need no extra at all.
postgres = ["psycopg[binary]"]
mysql = ["pymysql"]
mongodb = ["pymongo"]
s3 = ["boto3"]
redis = ["redis"]
# Convenience meta-extra pulling every reversible-backend driver at once.
all-adapters = ["psycopg[binary]", "pymysql", "pymongo", "boto3", "redis"]

# Test doubles that let the adapter round-trips run fully offline (no live
# server): moto fakes S3, fakeredis fakes Redis, mongomock fakes Mongo CRUD.
# Postgres round-trips need a reachable server (PHERIX_TEST_PG_DSN); MySQL/Mongo
# server-backed tests skip cleanly when absent.
test-adapters = ["psycopg[binary]", "pymysql", "pymongo", "boto3", "moto", "redis", "fakeredis", "mongomock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pherix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
