[project]
name = "pherix"
version = "0.1.0"
description = "A transactional resource runtime for AI agents: undo the reversible, gate the irreversible — against your backend's own state."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Luke Pledger" }]
keywords = ["ai", "agents", "llm", "tool-calls", "transactions", "rollback", "saga", "compensation", "undo", "mcp", "agent-reliability"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/LukeyP02/Pherix"
Repository = "https://github.com/LukeyP02/Pherix"
Issues = "https://github.com/LukeyP02/Pherix/issues"

[project.optional-dependencies]
dev = ["pytest"]
# The public site service (server/) — a FastAPI app that serves site/ and
# exposes the real engine over HTTP. A deploy artifact, never needed to import
# or use the library; the kernel stays dependency-free. `pip install .[site]`.
site = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
# Property-based / chaos / differential testing of the kernel laws
# (tests/test_laws_*.py). Hypothesis is a TEST-ONLY dependency — the kernel
# (pherix/core/) imports nothing from it; only the law suites do. Everything
# still runs fully offline. See docs/operator/verification.md.
test = ["pytest", "hypothesis"]
# Real-agent dogfoods only (examples/dogfood/). The library itself stays
# dependency-free — this extra is never needed to import or use pherix, only
# to run the keyed real-agent scripts. `anthropic` drives the cloud path;
# `openai` drives any OpenAI-compatible local endpoint (Ollama / vLLM) for the
# model-blind / air-gapped runs.
dogfood = ["anthropic", "openai"]

# Per-backend adapter drivers. The kernel is dependency-free: every adapter
# lazy-imports its driver inside its own __init__/methods, so `import pherix`
# needs none of these. A driver is pulled only to *instantiate* the matching
# adapter — `pip install pherix[postgres]` etc. The compensator catalog and the
# REST/MQ harnesses are client-agnostic (duck-typed) and need no extra at all.
postgres = ["psycopg[binary]"]
mysql = ["pymysql"]
mongodb = ["pymongo"]
s3 = ["boto3"]
redis = ["redis"]
dynamodb = ["boto3"]
gcs = ["google-cloud-storage"]
elasticsearch = ["elasticsearch"]
# Convenience meta-extra pulling every reversible-backend driver at once.
all-adapters = ["psycopg[binary]", "pymysql", "pymongo", "boto3", "redis", "google-cloud-storage", "elasticsearch"]

# The journal-sync ship side: AES-256-GCM payload encryption (cryptography) and
# the default HTTP transport to the control-plane ingest endpoint (requests). The
# kernel never imports these; a non-syncing agent needs neither.
sync = ["cryptography", "requests"]

# Test doubles that let the adapter round-trips run fully offline (no live
# server): moto fakes S3 + DynamoDB, fakeredis fakes Redis, mongomock fakes
# Mongo CRUD. GCS and Elasticsearch have no third-party in-process fake, so the
# conformance battery runs them against the faithful in-repo doubles in
# tests/_fakes.py — no extra test dependency needed. Postgres round-trips need a
# reachable server (PHERIX_TEST_PG_DSN); MySQL/Mongo server-backed tests skip
# cleanly when absent.
test-adapters = ["psycopg[binary]", "pymysql", "pymongo", "boto3", "moto", "redis", "fakeredis", "mongomock"]

# The commercial control plane (dashboard/backend/) — a separate multi-tenant
# service, NOT part of the OSS kernel. The library never imports it; `import
# pherix` needs none of these and the default test suite skips the control-plane
# tests when the extra is absent (importorskip), so everything stays offline-clean.
# httpx ships FastAPI's TestClient. uvicorn runs the service.
control-plane = ["fastapi", "uvicorn", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pherix"]

[tool.hatch.build.targets.sdist]
include = ["/pherix", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "blast_radius: trust pillar — a mistake is contained, not catastrophic (rollback ≈ identity, partial-failure unwind, compensator left-inverse, missing-compensator STUCK)",
    "audit: trust pillar — you can always prove what happened (completeness of the journal, durability across crash/truncation/byte-flip, recovery folds to a consistent world)",
    "oversight: trust pillar (the wedge) — a human stays on the irreversible (no irreversible effect commits without explicit approval or a registered compensator, under any interleaving)",
]
